# field-template-mcp

./: .dockerignore  .env.example  .gitignore  .justfile  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_PLAN.md  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirement.md  requirements.txt  test_integration.py  test_simple.py
configs/tools/: DESIGN_NOTES.md  README.md  call_formula.json  call_tool.json  classify_by_llm.json  extract_by_llm.json  extract_items_by_entity.json  extract_metric_by_entity.json  tag_by_llm.json
configs/tools/calculate_formula/: metadata.json  tool.json  ui.json
configs/tools/call_mcp_tool/: metadata.json  tool.json  ui.json
configs/tools/classify_by_llm/: tool.json
docs/: CHANGES.md  QUICKSTART.md  stage-plan-refine-cc.md
examples/: stage2_1_contract_extraction.py  stage2_2_multi_field.py
reference/: best-practise-tool.md  function-desc-example.md  llm-choose-the-right-tool.md
src/: __init__.py
src/models/: __init__.py  base.py
src/services/: __init__.py  batch_processor.py  field_resolver.py  input_normalizer.py  llm_client.py  schema_validator.py  type_coercion.py
src/tools/: __init__.py  classify_by_llm.py  dynamic_registry.py  extract_by_llm.py  extract_text_util.py  llm_tool_executor.py  models.py  tag_by_llm.py  template_loader.py
tests/: test-tesla-article.txt  test_mcp_client.py
tests/services/: test_field_resolver.py  test_input_normalizer.py  test_schema_validator.py
tests/tools/: test_classify_by_llm.py  test_extract_by_llm.py  test_tag_by_llm.py
(+9 files in other folders)
